test/assets/invalid/signatures/either-wrong-right.hs
a :: Either () Int
a = Right "A"